docs/6.20.0/users/_sources/usingdakota/reference/method-approximate_control_variate-search_model_graphs-no_recursion.rst.txt
.. _method-approximate_control_variate-search_model_graphs-no_recursion:

""""""""""""
no_recursion
""""""""""""


Do not recur over admissible DAGs for a given model ensemble



.. toctree::
   :hidden:
   :maxdepth: 1



**Specification**

- *Alias:* None

- *Arguments:* None


**Description**


This (default) option supports the ACV approach (:cite:p:`GORODETSKY2020109257`)
in utilizing only the peer DAG (all approximation control variates
target the same truth model).

Note that the omission of the ``search_model_graphs`` block defaults to
no searching over either DAGs or model subsets.  The ``no_recursion`` option
exists in order to enable search over the latter while supressing search over
the former, as shown below.




**Examples**



.. code-block::

    method,
    	model_pointer = 'ENSEMBLE'
    	approximate_control_variate acv_mf
    	  pilot_samples = 25 seed = 8674132
    	  search_model_graphs
	    no_recursion
	    model_selection
    	  max_function_evaluations = 500



